--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,9 +20,6 @@
             android:id="@+id/action_homeFragment_to_accountFragment"
             app:destination="@id/accountFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_subscriptionFragment"
-            app:destination="@id/subscriptionFragment" />
-        <action
             android:id="@+id/action_homeFragment_to_downloadFragment"
             app:destination="@id/downloadFragment" />
     </fragment>
@@ -30,7 +27,11 @@
         android:id="@+id/accountFragment"
         android:name="com.flaxstudio.wallpaperapp.fragments.AccountFragment"
         android:label="fragment_account"
-        tools:layout="@layout/fragment_account" />
+        tools:layout="@layout/fragment_account" >
+        <action
+            android:id="@+id/action_accountFragment_to_subscriptionFragment"
+            app:destination="@id/subscriptionFragment" />
+    </fragment>
     <fragment
         android:id="@+id/collectionFragment"
         android:name="com.flaxstudio.wallpaperapp.fragments.CollectionFragment"
