--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/star_outline"
         android:iconTintMode="src_in"
         android:title="Favourite"/>
-    <item android:id="@+id/profile"
+    <item android:id="@+id/account"
         android:icon="@drawable/user_outline"
         android:iconTintMode="src_over"
         android:title="Profile"/>
