--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="Wallpaper"
+                android:text="@string/app_name"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textAlignment="center"
