--- a/app/src/main/res/layout/rv_collection_item.xml
+++ b/app/src/main/res/layout/rv_collection_item.xml
@@ -27,22 +27,14 @@
             android:layout_width="match_parent"
             android:layout_height="28dp"
             android:layout_marginTop="9dp"
+            android:layout_weight="1"
             android:text="Animals"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/total_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1023 Wallpapers"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-        </LinearLayout>
+    </LinearLayout>
 
 
 
