--- a/app/src/main/res/layout/wallpaper_set_layout.xml
+++ b/app/src/main/res/layout/wallpaper_set_layout.xml
@@ -1,90 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom">
-
-    <com.google.android.material.card.MaterialCardView
+    android:layout_height="200dp"
+    android:padding="@dimen/rounded_low"
+    android:orientation="vertical">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/primary_dark"
-        app:cardCornerRadius="@dimen/rounded_high"
-        app:cardElevation="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="100dp"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="10dp"
+            android:src="@drawable/wallpaper_bg_set"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/medium_text">
+            android:layout_height="wrap_content"
+            android:text="@string/setAsWallpaper"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="@dimen/medium_text"
+            android:layout_marginTop="@dimen/rounded_high"
+            android:textColor="@color/black"/>
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/rounded_low"
-                android:text="@string/setAsWallpaper"
-                android:textColor="@color/white"
-                android:textSize="@dimen/medium_text"
+    </LinearLayout>
 
-                app:layout_constraintBottom_toTopOf="@id/group_btn"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    <ListView
+        android:id="@+id/listViewWallpaper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:dividerHeight="1dp"
+        android:scrollbars="none"/>
 
-            <RadioGroup
-                android:id="@+id/group_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/rounded_low"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text">
-
-                <com.google.android.material.radiobutton.MaterialRadioButton
-                    android:id="@+id/both_wallpaper"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/both_screens"
-                    android:textColor="@color/white" />
-
-                <com.google.android.material.radiobutton.MaterialRadioButton
-                    android:id="@+id/homeScreen"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/HomeScreen"
-                    android:textColor="@color/white" />
-
-                <com.google.android.material.radiobutton.MaterialRadioButton
-                    android:id="@+id/lockScreen"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/LockScreen"
-                    android:textColor="@color/white" />
-            </RadioGroup>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/apply_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/rounded_low"
-                android:backgroundTint="@color/white"
-                android:text="@string/apply"
-                android:textColor="@color/black"
-                android:textSize="@dimen/medium_text"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/group_btn"
-                app:layout_constraintStart_toStartOf="@id/group_btn"
-                app:layout_constraintTop_toBottomOf="@id/group_btn" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
