Like Feature implimented

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,6 +44,9 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/hostFragment" />
+        <action
+            android:id="@+id/action_hostFragment_to_favoritesFragment"
+            app:destination="@id/favoritesFragment" />
     </fragment>
     <fragment
         android:id="@+id/collectionFragment"
@@ -58,5 +61,14 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/collectionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/favoritesFragment"
+        android:name="com.flaxstudio.wallpaperapp.fragments.FavoritesFragment"
+        android:label="fragment_favorates"
+        tools:layout="@layout/fragment_favorates" >
+        <action
+            android:id="@+id/action_favoritesFragment_to_downloadFragment"
+            app:destination="@id/downloadFragment" />
     </fragment>
 </navigation>
